syntax="proto3";

package greet;
option go_package="greet/pb";

message Greeting{
    string first_name=1;
    string last_name=2;
}

message GreetRequest{
    Greeting greeting=1;
}
message GreetResponse{
    string result=1;
}

message GreetManyTimesRequest{
    Greeting greeting=1;
}
message GreetManyTimesResponse{
    string result=1;
}

message LongGreetRequest{
    Greeting greeting=1;
}
message LongGreetResponse{
    string result=2;
}

message GreetBiDiRequest{
Greeting greeting=1;
}
message GreetBiDiReponse{
    string result=1;
}


service GreetService{
    //unary
    rpc Greet(GreetRequest)returns(GreetResponse){};

    // Server side streaming
    rpc GreetManyTimes(GreetManyTimesRequest)returns(stream GreetManyTimesResponse){};

    //Client side streaming
    rpc LongGreet( stream LongGreetRequest)returns(LongGreetResponse){};

    //Bi-Directional streaming
    rpc BiDiGreet(stream GreetBiDiRequest)returns(stream GreetBiDiReponse){};
}